# algorithm

./: CMakeLists.txt
Oleksenko_Sergey_Lesson_5/: CMakeLists.txt  Oleksenko_Sergey_Lesson_5.cpp  Oleksenko_Sergey_Lesson_5.h  Stack.cpp  Stack.h  StackTask3.h  Task1.cpp  Task1.h  Task2.cpp  Task2.h  Task3.cpp  Task3.h  TaskStack3.cpp
Oleksenko_Sergey_Lesson_6/: CMakeLists.txt
Oleksenko_Sergey_Lesson_6/Oleksenko_Sergey_Lesson_6/: CMakeLists.txt  Find.cpp  Find.h  Oleksenko_Sergey_Lesson_6.cpp  Oleksenko_Sergey_Lesson_6.h  Task1.cpp  Task1.h  Task2.cpp  Task2.h
