# CMakeList.txt: проект CMake для Oleksenko_Sergey_Lesson_6; включите исходный код и определения
# укажите здесь логику для конкретного проекта.
#
cmake_minimum_required (VERSION 3.8)

# Добавьте источник для исполняемого файла этого проекта.
add_executable (OleksenkoSergeyLesson6 "Oleksenko_Sergey_Lesson_6.cpp" "Oleksenko_Sergey_Lesson_6.h" "Task1.cpp" "Task1.h" "Find.cpp" "Find.h" "Task2.cpp" "Task2.h")

# TODO: Добавьте тесты и целевые объекты, если это необходимо.
